--- a/backend/buses-api/src/main/resources/application.yml
+++ b/backend/buses-api/src/main/resources/application.yml
@@ -1,15 +1,21 @@
-server: { port: 8080 }
+server:
+  port: 8080
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/buses
     username: buses
     password: buses
+    driver-class-name: org.postgresql.Driver
   jpa:
-    hibernate: { ddl-auto: validate }
-    properties: { hibernate.format_sql: true }
-  flyway: { enabled: true }
-  data:
-    redis:
-      repositories:
-        enabled: false  
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+      hibernate.format_sql: true
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+
 management.endpoints.web.exposure.include: health,info
