--- a/backend/buses-api/build.gradle
+++ b/backend/buses-api/build.gradle
@@ -2,8 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco' 
 	id 'org.sonarqube' version '4.4.1.3373'
-	id 'org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.7.6-hotspot'
 }
 
 group = 'cl.venegas'
