--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Ignorar dependencias del frontend
+/frontend/node_modules
+/frontend/dist
+
+# Ignorar dependencias del backend
+/backend/node-modules
+/backend/build
+/backend/out
+
+# IDE y sistema
+.idea
+.vscode
+.DS_Store
+
+#Herramientas para los test
+backend/buses-api/tools/*.jar
 *.txt
