--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "vue": "^3.5.18"
   },
   "devDependencies": {
