Integracion de la Pasarela de Pago en el Backend y Frontend
La finalidad de esto se lleva a cabo para implementar la pasarela de pago en el backend y el frontend ademas de esto fue reestructurar el frontend para  que el flujo de la aplicacion siga el esperado, buscar el viaje; Elegir fecha; Confirmar reserva; pagar.

--- a/backend/buses-api/src/main/resources/application.yml
+++ b/backend/buses-api/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/buses
-    username: buses
-    password: buses
+    url: jdbc:postgresql://localhost:5433/buses
+    username: postgres
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
       hibernate.format_sql: true
