Integracion Logs en ProccesPaymentService
Función: Implementar un registro completo y corregir la configuración de la base de datos

- Añadir el registro SLF4J a CreateBookingUseCase (entrada, errores, éxito)
- Añadir el registro SLF4J a ProcessPaymentService (flujo de pago, resultado de la transacción)
- Actualizar application.yml para usar el puerto PostgreSQL (5432) y las credenciales correctas
- Asegurar el cumplimiento de la rúbrica de entrega final (requisitos de registro)

--- a/backend/buses-api/src/main/resources/application.yml
+++ b/backend/buses-api/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/buses
-    username: postgres
-    password: admin
+    url: jdbc:postgresql://localhost:5432/buses
+    username: buses
+    password: buses
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
