--- a/backend/buses-api/src/main/resources/application.yml
+++ b/backend/buses-api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/buses
+    url: jdbc:postgresql://localhost:5433/buses
     username: buses
     password: buses
     driver-class-name: org.postgresql.Driver
@@ -17,5 +17,6 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+    clean-disabled: false
 
 management.endpoints.web.exposure.include: health,info
